--- a/examples/notebooks/sobol_for_correlated_problems.ipynb
+++ b/examples/notebooks/sobol_for_correlated_problems.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "615be3cd",
    "metadata": {},
    "source": [
     "Method and tests from paper:\n",
@@ -19,24 +20,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
+   "id": "869212c9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from SALib.sample.sobol_corr import sample\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "from tqdm import tqdm\n",
+    "\n",
     "from SALib.analyze.sobol_corr import analyze"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
+   "id": "d0da3a0e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "from tqdm import tqdm\n",
-    "import numpy as np\n",
+    "from SALib.sample.sobol_corr import sample\n",
+    "\n",
     "\n",
     "def get_sensitivity_stats(problem, si_fabric, n=100, plotting=False):\n",
     "    results = {}\n",
@@ -47,50 +52,52 @@
     "                results[k] = [v]\n",
     "            else:\n",
     "                results[k].append(v)\n",
-    "                \n",
+    "\n",
     "    for k in results:\n",
     "        results[k] = np.array(results[k])\n",
-    "    \n",
+    "\n",
     "    if plotting:\n",
     "        for k in results:\n",
-    "            for i in range(problem['num_vars']):\n",
+    "            for i in range(problem[\"num_vars\"]):\n",
     "                print(\"===========\")\n",
-    "                print(k, problem['names'][i])\n",
-    "                print('median: ', np.median(results[k][:, i]))\n",
-    "                print('mean: ', np.mean(results[k][:, i]))\n",
-    "                print('std: ', np.std(results[k][:, i]))\n",
+    "                print(k, problem[\"names\"][i])\n",
+    "                print(\"median: \", np.median(results[k][:, i]))\n",
+    "                print(\"mean: \", np.mean(results[k][:, i]))\n",
+    "                print(\"std: \", np.std(results[k][:, i]))\n",
     "                plt.title(k)\n",
     "                sns.distplot(results[k][:, i])\n",
     "                plt.show()\n",
     "                plt.close()\n",
-    "    \n",
-    "    return results "
+    "\n",
+    "    return results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
+   "id": "c740a324",
    "metadata": {},
    "outputs": [],
    "source": [
     "def make_Si(problem):\n",
     "    sample_args = {\n",
-    "        'n_sample': 1000,\n",
+    "        \"n_sample\": 1000,\n",
     "    }\n",
     "\n",
     "    analyze_args = {\n",
     "        **sample_args,\n",
-    "        'n_boot': 100,\n",
-    "        'estimator': 'soboleff1',\n",
+    "        \"n_boot\": 100,\n",
+    "        \"estimator\": \"soboleff1\",\n",
     "    }\n",
-    "    \n",
+    "\n",
     "    x = sample(problem, **sample_args)\n",
-    "    y = problem['func'](x)\n",
+    "    y = problem[\"func\"](x)\n",
     "    return analyze(problem, x, y, **analyze_args)"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "44a8833f",
    "metadata": {},
    "source": [
     "# Test 1"
@@ -98,86 +105,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
+   "id": "fc530224",
    "metadata": {},
    "outputs": [],
    "source": [
     "def make_problem1():\n",
-    "\n",
     "    def func(v):\n",
-    "        return np.sum(v, axis=1) # f(x) = x1+x2+x3\n",
+    "        return np.sum(v, axis=1)  # f(x) = x1+x2+x3\n",
     "\n",
-    "    \n",
     "    def si_analytical():\n",
     "        return {\n",
-    "            'S1_ind':  [0.02, 0.05, 0.03],\n",
-    "            'ST_ind':  [0.02, 0.05, 0.03],\n",
-    "            'S1_full': [0.95, 0.40, 0.60],\n",
-    "            'ST_full': [0.95, 0.40, 0.60],\n",
+    "            \"S1_ind\": [0.02, 0.05, 0.03],\n",
+    "            \"ST_ind\": [0.02, 0.05, 0.03],\n",
+    "            \"S1_full\": [0.95, 0.40, 0.60],\n",
+    "            \"ST_full\": [0.95, 0.40, 0.60],\n",
     "        }\n",
     "\n",
-    "\n",
     "    problem = {\n",
-    "        'num_vars': 3,\n",
-    "        'names': ['x1', 'x2', 'x3'],\n",
-    "        'distrs': ['norm', 'norm', 'norm'],\n",
-    "        'bounds': [\n",
+    "        \"num_vars\": 3,\n",
+    "        \"names\": [\"x1\", \"x2\", \"x3\"],\n",
+    "        \"distrs\": [\"norm\", \"norm\", \"norm\"],\n",
+    "        \"bounds\": [\n",
     "            [0.0, 1.0],\n",
     "            [0.0, 1.0],\n",
     "            [0.0, 1.0],\n",
     "        ],\n",
-    "        'corr': [\n",
+    "        \"corr\": [\n",
     "            [1.0, 0.5, 0.8],\n",
     "            [0.5, 1.0, 0.0],\n",
     "            [0.8, 0.0, 1.0],\n",
     "        ],\n",
-    "        'func': func,\n",
-    "        'analytical': si_analytical,\n",
+    "        \"func\": func,\n",
+    "        \"analytical\": si_analytical,\n",
     "    }\n",
-    "    \n",
+    "\n",
     "    return problem"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "40c10463",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 33%|███▎      | 163/500 [00:04<00:08, 38.39it/s]"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "problem = make_problem1()\n",
     "results_c = get_sensitivity_stats(problem, make_Si, n=500, plotting=False)\n",
-    "results_a = problem['analytical']()"
+    "results_a = problem[\"analytical\"]()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0ead401e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('Calculated: S1_ind', results_c['S1_ind'].mean(axis=0))\n",
-    "print('Analytical: S1_ind', results_a['S1_ind'], '\\n')\n",
+    "print(\"Calculated: S1_ind\", results_c[\"S1_ind\"].mean(axis=0))\n",
+    "print(\"Analytical: S1_ind\", results_a[\"S1_ind\"], \"\\n\")\n",
     "\n",
-    "print('Calculated: ST_ind', results_c['ST_ind'].mean(axis=0))\n",
-    "print('Analytical: ST_ind', results_a['ST_ind'], '\\n')\n",
+    "print(\"Calculated: ST_ind\", results_c[\"ST_ind\"].mean(axis=0))\n",
+    "print(\"Analytical: ST_ind\", results_a[\"ST_ind\"], \"\\n\")\n",
     "\n",
-    "print('Calculated: S1_full', results_c['S1_full'].mean(axis=0))\n",
-    "print('Analytical: S1_full', results_a['S1_full'], '\\n')\n",
+    "print(\"Calculated: S1_full\", results_c[\"S1_full\"].mean(axis=0))\n",
+    "print(\"Analytical: S1_full\", results_a[\"S1_full\"], \"\\n\")\n",
     "\n",
-    "print('Calculated: ST_full', results_c['ST_full'].mean(axis=0))\n",
-    "print('Analytical: ST_full', results_a['ST_full'])"
+    "print(\"Calculated: ST_full\", results_c[\"ST_full\"].mean(axis=0))\n",
+    "print(\"Analytical: ST_full\", results_a[\"ST_full\"])"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "f224fb03",
    "metadata": {},
    "source": [
     "# Test 2"
@@ -186,73 +186,73 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3a1e24d9",
    "metadata": {},
    "outputs": [],
    "source": [
     "def make_problem2():\n",
-    "\n",
     "    def func(v):\n",
-    "        return np.sum(v, axis=1) # f(x) = x1+x2+x3\n",
+    "        return np.sum(v, axis=1)  # f(x) = x1+x2+x3\n",
     "\n",
-    "    \n",
     "    def si_analytical():\n",
     "        return {\n",
-    "            'S1_ind':  [0.70, 0.37, 0.50],\n",
-    "            'ST_ind':  [0.70, 0.37, 0.50],\n",
-    "            'S1_full': [0.49, 0.05, 0.25],\n",
-    "            'ST_full': [0.49, 0.05, 0.25],\n",
+    "            \"S1_ind\": [0.70, 0.37, 0.50],\n",
+    "            \"ST_ind\": [0.70, 0.37, 0.50],\n",
+    "            \"S1_full\": [0.49, 0.05, 0.25],\n",
+    "            \"ST_full\": [0.49, 0.05, 0.25],\n",
     "        }\n",
     "\n",
-    "\n",
     "    problem = {\n",
-    "        'num_vars': 3,\n",
-    "        'names': ['x1', 'x2', 'x3'],\n",
-    "        'distrs': ['norm', 'norm', 'norm'],\n",
-    "        'bounds': [\n",
+    "        \"num_vars\": 3,\n",
+    "        \"names\": [\"x1\", \"x2\", \"x3\"],\n",
+    "        \"distrs\": [\"norm\", \"norm\", \"norm\"],\n",
+    "        \"bounds\": [\n",
     "            [0.0, 1.0],\n",
     "            [0.0, 1.0],\n",
     "            [0.0, 1.0],\n",
     "        ],\n",
-    "        'corr': [\n",
+    "        \"corr\": [\n",
     "            [1.0, -0.5, 0.2],\n",
     "            [-0.5, 1.0, -0.7],\n",
     "            [0.2, -0.7, 1.0],\n",
     "        ],\n",
-    "        'func': func,\n",
-    "        'analytical': si_analytical,\n",
+    "        \"func\": func,\n",
+    "        \"analytical\": si_analytical,\n",
     "    }\n",
-    "    \n",
+    "\n",
     "    return problem"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "748d1e9e",
    "metadata": {},
    "outputs": [],
    "source": [
     "problem = make_problem2()\n",
     "results_c = get_sensitivity_stats(problem, make_Si, n=500, plotting=False)\n",
-    "results_a = problem['analytical']()"
+    "results_a = problem[\"analytical\"]()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c06df0dd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('Calculated: S1_ind', results_c['S1_ind'].mean(axis=0))\n",
-    "print('Analytical: S1_ind', results_a['S1_ind'], '\\n')\n",
+    "print(\"Calculated: S1_ind\", results_c[\"S1_ind\"].mean(axis=0))\n",
+    "print(\"Analytical: S1_ind\", results_a[\"S1_ind\"], \"\\n\")\n",
     "\n",
-    "print('Calculated: ST_ind', results_c['ST_ind'].mean(axis=0))\n",
-    "print('Analytical: ST_ind', results_a['ST_ind'], '\\n')\n",
+    "print(\"Calculated: ST_ind\", results_c[\"ST_ind\"].mean(axis=0))\n",
+    "print(\"Analytical: ST_ind\", results_a[\"ST_ind\"], \"\\n\")\n",
     "\n",
-    "print('Calculated: S1_full', results_c['S1_full'].mean(axis=0))\n",
-    "print('Analytical: S1_full', results_a['S1_full'], '\\n')\n",
+    "print(\"Calculated: S1_full\", results_c[\"S1_full\"].mean(axis=0))\n",
+    "print(\"Analytical: S1_full\", results_a[\"S1_full\"], \"\\n\")\n",
     "\n",
-    "print('Calculated: ST_full', results_c['ST_full'].mean(axis=0))\n",
-    "print('Analytical: ST_full', results_a['ST_full'])"
+    "print(\"Calculated: ST_full\", results_c[\"ST_full\"].mean(axis=0))\n",
+    "print(\"Analytical: ST_full\", results_a[\"ST_full\"])"
    ]
   }
  ],
@@ -261,20 +261,8 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 5
 }
