--- a/examples/sample_with_covariance.ipynb
+++ b/examples/sample_with_covariance.ipynb
@@ -2,7 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "id": "9c950777",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "id": "2ef5fc96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,46 +22,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
+   "id": "ec91c85a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[  0.   4.   2.   0.   0.]\n",
-      " [  0.   2.   4.   0.   0.]\n",
-      " [250.   0.   0.  10.  -2.]\n",
-      " [400.   0.   0.  -2.  10.]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "means = np.array([0.0, 0.0, 250.0, 400.0])\n",
-    "means = np.expand_dims(means, axis = 0).T\n",
+    "means = np.expand_dims(means, axis=0).T\n",
     "\n",
-    "cov = np.array([\n",
-    "     [4,  2,  0,  0], \n",
-    "     [2,  4,  0,  0], \n",
-    "     [0,  0, 10, -2], \n",
-    "     [0,  0, -2, 10]\n",
-    "])\n",
+    "cov = np.array([[4, 2, 0, 0], [2, 4, 0, 0], [0, 0, 10, -2], [0, 0, -2, 10]])\n",
     "\n",
     "composition = np.hstack((means, cov))\n",
     "print(composition)\n",
     "\n",
     "\n",
     "problem = {\n",
-    "    'num_vars': 4,\n",
-    "    'names': ['x1', 'x2', 'x3', 'x4'],\n",
-    "    'bounds': composition,\n",
-    "    'dists': 'multi_norm',\n",
+    "    \"num_vars\": 4,\n",
+    "    \"names\": [\"x1\", \"x2\", \"x3\", \"x4\"],\n",
+    "    \"bounds\": composition,\n",
+    "    \"dists\": \"multi_norm\",\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
+   "id": "552a8ff3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,37 +56,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
+   "id": "a60bb944",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 4.00150919e+00  1.99508552e+00 -2.42809871e-02  9.45874574e-03]\n",
-      " [ 1.99508552e+00  3.99577636e+00 -2.28703954e-02 -2.11412989e-02]\n",
-      " [-2.42809871e-02 -2.28703954e-02  9.99190795e+00 -1.95228945e+00]\n",
-      " [ 9.45874574e-03 -2.11412989e-02 -1.95228945e+00  9.95717186e+00]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(np.cov(X.T))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
+   "id": "ffe0d335",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[3.08933655e-03 3.91430732e-03 2.49993216e+02 4.00008456e+02]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(np.mean(X, axis=0))"
    ]
@@ -109,20 +80,8 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 5
 }
